fix tooltip island import

--- a/src/components/ui/CitationTooltipIsland.astro
+++ b/src/components/ui/CitationTooltipIsland.astro
@@ -2,6 +2,6 @@
 import runCitationTooltips from './citation-tooltips.js';
 ---
 
-<script>
+<script define:vars={{ runCitationTooltips }}>
   runCitationTooltips();
 </script>
